# webcam_stream

./: .gitignore  README.md
.github/workflows/: ci.yaml
01-webapp/: README.md  app.py
01-webapp/templates/: index.html
02-opencv-tutorial/: README.md  app.py
03-opencv-street-ipynb/: notebook.ipynb
04-opencv-street-py/: app.py
05-opencv-people/: README.md  app.py
06-opencv-cars/: README.md  app.py
promotion/: README.md  pyproject.toml  setup.cfg
promotion/src/drumroll.egg-info/: PKG-INFO  SOURCES.txt
promotion/src/promotion/: main.py
promotion/src/promotion.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
promotion/src/promotion/cli/: args.py
promotion/src/promotion/video/: baseline.py  process.py  stream.py
promotion/tests/: test_example.py
webapp/: app.py
webapp/templates/: index.html
