[metadata]
name = promotion
version = 0.0.1
author = Kevin Rue-Albrecht
author_email = kevin.rue-albrecht@imm.ox.ac.uk
description = Toolkit to write and execute pipelines using the DRMAA library.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/kevinrue/drumroll
project_urls =
    Bug Tracker = https://github.com/kevinrue/drumroll/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src
